# SyncMessageQueue

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
src/parallel_executor/: CMakeLists.txt  DataEvent.h  Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceB.h  DeviceEvent.h  Event.h  EventQueue.cpp  EventQueue.h  Parser.cpp  Parser.h  StartedEvent.h  WorkDoneEvent.h  events.cpp  main.cpp
test/: CMakeLists.txt  Test_Devices.cpp  Test_EventQueue.cpp  Test_Parser.cpp
